# BayesNewton

./: .pre-commit-config.yaml  pyproject.toml  requirements.txt  setup.py
bayesnewton/: basemodels.py  cubature.py  inference.py  kernels.py  likelihoods.py  models.py  ops.py  utils.py
tests/: test_gp_vs_markovgp_class.py  test_gp_vs_markovgp_reg.py  test_gp_vs_markovgp_spacetime.py  test_sparsemarkov.py  test_vs_exact_marg_lik.py  test_vs_gpflow_class.py  test_vs_gpflow_reg.py  test_vs_gpflow_shutters.py  test_vs_gpflow_spacetime.py
